add modification words and colors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
 
 
 
@@ -34,40 +36,44 @@
     <!--Sous block 1-->
   <section class="sous-block-0"> 
     <div class="sb1">
-        <h1>EL LAHBIB  <br> ABDELAZIZ</h1>
+        <h1 class="nom">EL LAHBIB  <br> ABDELAZIZ</h1>
         <h2 class="BACK-END">Developpeur Web BACK-END</h2>
     </div>
   
     <!--Sous block 2-->
       <div class="sb2">
-           <center><img class="test2" src="/home/abdelaziz/Téléchargements/img/56396071.jpeg" 
-            alt="" 
+            <center><img class="test2" src="img/photo_abdel.jpeg" 
+            alt="photo_abdel" 
             height="200px" 
             width="200px" /></center>
       </div>
     <!--Sous block 3-->
       <div class="sb3">
         <!-- <p class="Adress"> -->
-        <p><i class="fas fa-map-marker-alt fa-2x Espace"></i><a href="https://www.google.com/maps/place/12+Boulevard+de+l'Esp%C3%A9rance,+59430/@51.0329463,2.3370414,17z/data=!3m1!4b1!4m5!3m4!1s0x47dc8b9f851dc027:0x949763f8a47c1615!8m2!3d51.0329463!4d2.3392301"> 12 Boulevard de l'espérance</a></p>
-        <p> <i class="fas fa-envelope-square fa-2x Espace"></i> <a href="maito:Abdelaziz.59140@gmail.com"> Abdelaziz.59140@gmail.com</a></p>
-        <p><i class="fas fa-phone-square-alt fa-2x Espace"></i> 07.67.56.91.69</p>
-        <p><i class="fab fa-github-square fa-2x Espace"></i><a href="https://github.com/Abdelaziz-pixel"> Github.com/Abdelaziz-pixel</a></p>
+        <p><i class="far fa-compass fa-lg Espace"></i><a href="https://www.google.com/maps/place/12+Boulevard+de+l'Esp%C3%A9rance,+59430/@51.0329463,2.3370414,17z/data=!3m1!4b1!4m5!3m4!1s0x47dc8b9f851dc027:0x949763f8a47c1615!8m2!3d51.0329463!4d2.3392301"> 12 Boulevard de l'espérance</a></p>
+        <p><i class="far fa-envelope-open fa-lg Espace"></i> <a href="mailto:Abdelaziz.59140@gmail.com">Abdelaziz.59140@gmail.com</a></p>
+        <p><i class="fas fa-phone-alt fa-lg Espace"></i> 07.67.56.91.69</p>
+        <p><i class="fab fa-github fa-lg Espace"></i><a href="https://github.com/Abdelaziz-pixel"> Github.com/Abdelaziz-pixel</a></p>
       </div>
   </section>
+  <!-- <hr> -->
       <!--Block 2-->
     <!--Sous block 1-->
   <!-- <div class="Block2"> -->
     <section class="sous-block-1">
-      <div><img class="taille" src="/home/abdelaziz/Téléchargements/img/ban4.gif" alt=""></div>
       <div class="sb4">
-      <h3>PRÉSENTATION</h3>
-        <article>Actuellement en formation developpeur web python mention data analyste
-        à l'Adep <br> de Roubaix, je suis à la recherche d'un stage d'une durée de 6 mois.
+        <center><h3><p class="Encadrer"><i class="fas fa-user-circle fa-lg Espace"><font size="+1.5"> PRÉSENTATION</font></i></p></h3></center>
+
+        <article class="Écriture"><center> <font size="+1.5"> Mesdames, mesdemoiselles, messieurs, bonsoir. Dans quelques minutes vous 
+          allez voir le journal télévisé (1962). Vous n'en reconnaîtrez pas l'indicatif et vous noterez des changements 
+          je pense dans la présentation et dans le rythme. J'espère que vous aimerez ce nouveau journal télévisé. Nous avons
+           demandé au ministre de l'Information, Monsieur Alain Peyrefitte d'inaugurer cette nouvelle formule dont il a pris 
+           lui-même l'initiative."</font></center>
         </article>
       </div>
     <!--Sous block 2-->
       <div class="sb5">
-        <h3>FORMATIONS</h3>
+        <center><h3><p class="Encadrer"><i class="fas fa-graduation-cap fa-lg Espace"> <font size="+1.5"> FORMATIONS</font> </i></p></h3></center>
         <p> <strong> Formation 1 </strong> / Début - Fin </p>
         <p> <strong> Formation 2 </strong> / Début - Fin </p>
         <p> <strong> Formation 3 </strong> / Début - Fin </p>
@@ -78,7 +84,7 @@
     <section class="sous-block-2">
       
       <div class="sb6">
-        <h3>EXPÉRIENCE PROFESSIONELLE</h3>
+        <center><h3><p class="Encadrer"><i class="fas fa-briefcase fa-lg Espace"> <font size="+1.5"> EXPÉRIENCE PROFESSIONELLES </font> </i></p></h3></center>
         <p> <strong> Experience 1 </strong> / Début - Fin </p>
         <p> <strong> Experience 2 </strong> / Début - Fin </p>
         <p> <strong> Experience 3 </strong> / Début - Fin </p>
@@ -88,7 +94,7 @@
     <!--Sous block 1-->
   <!-- <div class="Block3"> -->
       <div class="sb7">
-        <h3>COMPÉTENCES PROFESSIONELLE</h3>
+        <center><h3><p class="Encadrer"><i class="far fa-list-alt fa-lg Espace"> <font size="+1.5"> COMPÉTENCES PROFESSIONELLES</font></i></p></h3></center>
         <ul>
           <li>PYTHON</li>
           <li>HTML5 & CSS3</li>
@@ -106,7 +112,7 @@
     <!--Sous block 2-->
     <section class="sous-block-3">
       <div class="sb8">
-        <h3>HOBBY</h3>
+        <center><h3><p class="Encadrer"><i class="fas fa-gamepad fa-lg Espace"> <font size="+1.5"> HOBBY</font></i></p></h3></center>
         <ul>
           <li>Sport</li>
           <li>Développement personnel</li>
@@ -118,7 +124,8 @@
   
     <!--Sous block 3-->
       <div class="sb9">
-    <h3>COMPÉTENCES PERSONNEL</h3>
+    <center><h3><p class="Encadrer"><i class="fas fa-user-check fa-lg Espace"> <font size="+1.5"> COMPÉTENCES PERSONNELS</font></i></p></h3></center>
+    <h3></h3>
         <ul>
           <li></li>
           <li></li>
